--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,10 +5,10 @@ container_group: container_group
 container_home_dir: "/home/{{ container_user }}/container"
 container_docker_compose: "{{ container_home_dir }}/docker-compose.yml"
 container_ansible_yml_managed_banner: |
-  # ===================================================================================
+  # ==================================================================================
   # This file is managed by Ansible. Changes may be overwritten when Ansible runs
-  # again. To configure this file, see https://github.com/zeevo/ansible-role-container.
-  # ===================================================================================
+  # again. To configure this file, see https://github.com/zeevo/ansible-role-container
+  # ==================================================================================
 container_name: container
 container_docker_restart_policy: unless-stopped
 container_volumes: []
