--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 container_image: ""
-container_docker_compose_action: up -d --remove-orphans
+container_docker_compose_action: up -d --force-recreate --remove-orphans
 container_user: container_user
 container_group: container_group
 container_home_dir: "/home/{{ container_user }}/container"
